src/features/quickSearch/QuickSearch.scss
.quick-search {
  display: flex;
  flex-direction: column;
  min-width: 400px;
  max-height: 35px;

  .search-bar {
    display: flex;
    justify-content: space-between;
    overflow: hidden;
    background-color: var(--highlight-200);
    border: var(--global-border-width) solid var(--highlight-200);
    border-radius: 20px;

    &:focus-within {
      border: var(--global-border-width) solid var(--accent-color-200);
    }

    input {
      width: 90%;
      padding: 15px;
      background-color: transparent;
      font-size: var(--fs-50);

      &:focus {
        outline: none;
      }
    }

    .search-icon,
    &.icon-btn {
      width: 10%;
    }
  }

  .dropdown {
    position: relative;

    .suggestions,
    .no-suggestions,
    .dropdown-menu {
      z-index: 3;
      position: absolute;
      top: 12px;
      width: 100%;
      max-height: 432px;
      background-color: var(--highlight-200);
      overflow-y: auto;
      font-size: var(--fs-50);
      border-radius: var(--global-border-radius);

      &:empty {
        display: none;
      }
    }

    .no-suggestions {
      padding: 16px;
    }
  }
}

